--- a/wp-content/themes/gsn/package.json
+++ b/wp-content/themes/gsn/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-install": "^0.6.0"
+  },
   "devDependencies": {
     "browser-sync": "^2.14.0",
     "del": "^2.2.1",
@@ -16,6 +18,7 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.0.2",
     "gulp-include": "^2.3.0",
+    "gulp-install": "^0.6.0",
     "gulp-jshint": "^2.0.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^2.2.0",
