--- a/wp-content/themes/gsn/composer.json
+++ b/wp-content/themes/gsn/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "vlucas/valitron": "^1.3"
+        "vlucas/valitron": "^1.3",
+        "pimax/fb-messenger-php": "dev-master"
     }
 }
