--- a/wp-content/themes/gsn/package.json
+++ b/wp-content/themes/gsn/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "gulp-install": "^0.6.0",
     "babel-core": "^6.26.0",
-    "express": "^4.16.2"
+    "babel-preset-env": "^1.6.1",
+    "express": "^4.16.2",
+    "gulp-install": "^0.6.0"
   },
   "devDependencies": {
     "clean-css": "^4.1.3",
